--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -43,15 +43,15 @@
 \setbeamercovered{dynamic}
 
 % The following info should normally be given in you main file:
-\title[Apache Kafka]{Apache Kafka}
+\title[Sonar]{Sonar}
 %
-\author{ Hunor Ördög, Norbert-Raymond Pap}
+\author{Hunor Ördög, Norbert-Raymond Pap, István-Lehel Balázs}
 %
 \institute[UBB Cluj-Napoca]{
   Department of Mathematics and Informatics\\
   Babe{\c{s}}--Bolyai University, Cluj-Napoca}
 %
-\date{2024 May}
+\date{2024 November}
 
 
 \begin{document}
