--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -88,11 +88,16 @@
 \section[Introduction]{Introduction}
 
 \begin{frame}{What is Sonar?}
-  \includegraphics[scale=0.25]{fig/kafka_logo.png}
-  \vspace*{2em}
   \begin{itemize}
-    \item Open-source \underline{distributed event streaming platform}.
+    \item Tool for \textbf{code quality} and \textbf{security} throughout the development lifecycle.
+    \item Catch \textbf{bugs}, \textbf{vulnerabilities}, and \textbf{design issues} 
+    (Duplicated code, Large methods, Inconsistent naming).
+    \item Improve \textbf{maintainability}, \textbf{readability}, and \textbf{security}.
   \end{itemize}
+\end{frame}
+
+\begin{frame}{What is Sonar?}
+  \href{https://youtu.be/xeTwG9XFFTE}{\includegraphics[scale=0.45]{fig/what_is_sonar_video.png}}
 \end{frame}
 
 
