--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -77,7 +77,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section[Brand changes]{Brand changes}
+\section[Brand changes - 28 oct 2024]{Brand changes - 28 oct 2024}
 
 \begin{frame}{Brand changes - 28 oct 2024}
   \hspace*{2.3em}
