--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -104,68 +104,69 @@
 \section[Why Use SonarCloud?]{Why Use SonarCloud?}
 
 \begin{frame}{Importance of Code Quality}
-  % dummy code =============
   \begin{itemize}
-    \item Producer
-    \item Consumer
-    \item Broker
-    \item Cluster
-    \item Topic
-    \item Partitions
-    \item Offset
-    \item Consumer Groups
-    \item Zookeeper
+    \item \textbf{Enhances Code Maintainability}: Ensures code is clean and structured, making future modifications easier.
+    \item \textbf{Prevents Technical Debt}: Identifies potential issues early to avoid accumulating maintenance burdens.
   \end{itemize}
-  \begin{tikzpicture}[remember picture, overlay]
-    \node[left=3em] at (current page.east)
-    {
-      \includegraphics[width=0.35\textwidth]{fig/kafka_logo.png}
-    };
-  \end{tikzpicture}
-  % ============= dummy code 
+  % \begin{tikzpicture}[remember picture, overlay]
+  %   \node[left=3em] at (current page.east)
+  %   {
+  %     \includegraphics[width=0.35\textwidth]{fig/kafka_logo.png}
+  %   };
+  % \end{tikzpicture}
 \end{frame}
+
+\begin{frame}{Importance of Code Quality}
+  \begin{itemize}
+    \item \textbf{Reduces Defects and Bugs}: Early detection of code issues minimizes the chance of runtime errors.
+    \item \textbf{Improves Team Collaboration}: Sets a standard for quality, enabling consistent and effective code reviews.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Importance of Code Quality}
+  \begin{itemize}
+    \item \textbf{Facilitates Learning and Growth}: Promotes best practices, reinforcing sound coding principles for developers.
+  \end{itemize}
+\end{frame}
+
 
 \begin{frame}{Security Benefits}
  
 \end{frame}
 
 \begin{frame}{Development Best Practices}{Producer}
-  \begin{itemize}
-    \item A producer is the source of data who will publish events.
-  \end{itemize}
-  \vspace*{1.5em}
-  \includegraphics[scale=0.192]{fig/producer.png}
+  
 \end{frame}
 
 
 \section[Key Features]{Key Features}
 
 \begin{frame}{Code Analysis}
-  \includegraphics[width=1.02\textwidth]{fig/vs1.png}
+  % \includegraphics[width=1.02\textwidth]{fig/vs1.png}
 \end{frame}
 
 \begin{frame}{Language Support}
-  \includegraphics[width=0.99\textwidth]{fig/vs2.png}
+  
 \end{frame}
 
 \begin{frame}{Integration Capabilities}
-  \includegraphics[width=0.99\textwidth]{fig/vs2.png}
+  
 \end{frame}
 
 \begin{frame}{Cloud-Based Convenience}
-  \includegraphics[width=0.99\textwidth]{fig/vs2.png}
+
 \end{frame}
 
 
 \section[How SonarCloud Works]{How SonarCloud Works}
 
 \begin{frame}{Static Code Analysis}
-  \begin{tikzpicture}[remember picture, overlay]
-    \node[right=4.02em] at (current page.185)
-    {
-      \includegraphics[width=1.09\textwidth]{fig/image.png}
-    };
-  \end{tikzpicture}
+  % \begin{tikzpicture}[remember picture, overlay]
+  %   \node[right=4.02em] at (current page.185)
+  %   {
+  %     \includegraphics[width=1.09\textwidth]{fig/image.png}
+  %   };
+  % \end{tikzpicture}
 \end{frame}
 
 \begin{frame}{Quality Gates}
