--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -131,11 +131,19 @@
 
 
 \begin{frame}{Security Benefits}
- 
+  \begin{itemize}
+    \item \textbf{Vulnerability Detection}: Sonar identifies security vulnerabilities and potential exploits in your code, helping prevent data breaches and security incidents.
+    \item \textbf{OWASP Compliance}: Ensures code adheres to recognized security standards like OWASP Top 10, promoting industry-level security practices.
+    % \item \textbf{Continuous Monitoring}: Provides ongoing code analysis in real-time, allowing teams to detect and fix security issues during development.
+  \end{itemize}
 \end{frame}
 
-\begin{frame}{Development Best Practices}{Producer}
-  
+\begin{frame}{Development Best Practices}
+  \begin{itemize}
+    \item \textbf{Code Smell Detection}: Highlights suboptimal code structures that could lead to future maintenance problems.
+    \item \textbf{Enforces Coding Standards}: Automates the application of style and quality guidelines, ensuring consistency across the codebase.
+    \item \textbf{Automated Quality Gates}: Sets pass/fail criteria for code quality, allowing only compliant code to merge into main branches, maintaining high development standards.
+  \end{itemize}
 \end{frame}
 
 
