--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -138,6 +138,15 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Security Benefits}
+  \includegraphics[width=1\textwidth]{fig/api-security-1.PNG}
+\end{frame}
+
+\begin{frame}{Security Benefits}
+  Solution sugestion in SonarCloud:
+  \includegraphics[width=1.04\textwidth]{fig/api-security-2.PNG}
+\end{frame}
+
 \begin{frame}{Development Best Practices}
   \begin{itemize}
     \item \textbf{Code Smell Detection}: Highlights suboptimal code structures that could lead to future maintenance problems.
@@ -189,7 +198,7 @@
 \section[SonarCloud in Action]{SonarCloud in Action}
 
 \begin{frame}{Example Workflow}
- 
+
 \end{frame}
 
 \begin{frame}{Live Demo}
