--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -143,7 +143,10 @@
 \end{frame}
 
 \begin{frame}{Security Benefits}
-  Solution sugestion in SonarCloud:
+  \begin{itemize}
+    \item Solution sugestion in SonarCloud: 
+  \end{itemize}
+  \vspace*{2em}
   \includegraphics[width=1.04\textwidth]{fig/api-security-2.PNG}
 \end{frame}
 
