--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -165,8 +165,25 @@
   % \includegraphics[width=1.02\textwidth]{fig/vs1.png}
 \end{frame}
 
-\begin{frame}{Language Support}
-  
+\begin{frame}{Supported Languages by SonarCloud}
+  \begin{itemize}
+      \item \textbf{Programming Languages:}
+      \begin{itemize}
+          \item ABAP, C, C++, C\#, Dart, Go, Java, JavaScript, Kotlin, PHP, Python, Ruby, Swift, TypeScript
+      \end{itemize}
+        \item \textbf{Markup and Configuration:}
+      \begin{itemize}
+        \item CSS, SCSS, Less, style inside PHP/HTML/VueJS, HTML, XML
+      \end{itemize}
+      \item \textbf{Infrastructure \& Platforms:}
+      \begin{itemize}
+        \item Ansible, Azure Resource Manager, CloudFormation, Docker, Kubernetes/Helm, Terraform
+      \end{itemize}
+      \item \textbf{Enterprise Languages:}
+      \begin{itemize}
+        \item Apex, COBOL, PLI, RPG
+      \end{itemize}
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Integration Capabilities}
