sonar solution image

--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -205,6 +205,13 @@
 
 \section[How SonarCloud Works]{How SonarCloud Works}
 
+
+\begin{frame}{The Sonar Solution}
+  \vspace{0.6em}
+  \includegraphics[scale=0.22]{fig/sonar_solution.png}
+\end{frame}
+
+
 \begin{frame}{Static Code Analysis}
   \begin{itemize}
     \item \textbf{Abstract Syntax Tree (AST) Parsing}: Builds a tree representation of code structure to analyze syntax and detect patterns.
