--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -238,6 +238,10 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Quality Gate - SonarCloud PR Comment}
+  \includegraphics[width=1.0\textwidth]{fig/q-gate-1.png}
+\end{frame}
+
 \begin{frame}{Dashboard and Reports}
  
 \end{frame}
