--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -257,7 +257,10 @@
 \section[SonarCloud in Action]{SonarCloud in Action}
 
 \begin{frame}{Example Workflow}
-
+  \begin{itemize}
+    \item \href{https://github.com/hunororg/ubb-flutter-pt-app/blob/main/.github/workflows/build.yml}{hunororg/ubb-flutter-pt-app/.github/workflows/build.yml}
+  \end{itemize}
+   
 \end{frame}
 
 \begin{frame}{Live Demo}
