--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -90,8 +90,10 @@
 \begin{frame}{What is Sonar?}
   \begin{itemize}
     \item Tool for \textbf{code quality} and \textbf{security} throughout the development lifecycle.
+    \vspace*{0.75em}
     \item Catch \textbf{bugs}, \textbf{vulnerabilities}, and \textbf{design issues} 
     (Duplicated code, Large methods, Inconsistent naming).
+    \vspace*{0.75em}
     \item Improve \textbf{maintainability}, \textbf{readability}, and \textbf{security}.
   \end{itemize}
 \end{frame}
@@ -166,10 +168,6 @@
 
 \section[Key Features]{Key Features}
 
-\begin{frame}{Code Analysis}
-  % \includegraphics[width=1.02\textwidth]{fig/vs1.png}
-\end{frame}
-
 \begin{frame}{Supported Languages by SonarCloud}
   \begin{itemize}
       \item \textbf{Programming Languages:}
@@ -217,7 +215,6 @@
 
 \section[How SonarCloud Works]{How SonarCloud Works}
 
-
 \begin{frame}{The Sonar Solution}
   \vspace{0.6em}
   \includegraphics[scale=0.22]{fig/sonar_solution.png}
@@ -261,11 +258,7 @@
   \includegraphics[width=1.0\textwidth]{fig/q-gate-1.png}
 \end{frame}
 
-\begin{frame}{Dashboard and Reports}
- 
-\end{frame}
-
-\section[ Integration with GitHub and CI/CD Pipelines]{Integration with GitHub and CI/CD Pipelines}
+\section[ Integration with GitHub]{Integration with GitHub}
 
 \begin{frame}{Setting Up SonarCloud in GitHub}
   
@@ -281,18 +274,13 @@
 
 \end{frame}
 
-\begin{frame}{Basic Pipeline Configuration}
- 
-\end{frame}
-
-\section[SonarCloud in Action]{SonarCloud in Action}
-
 \begin{frame}{Example Workflow}
   \begin{itemize}
     \item \href{https://github.com/hunororg/ubb-flutter-pt-app/blob/main/.github/workflows/build.yml}{hunororg/ubb-flutter-pt-app/.github/workflows/build.yml}
   \end{itemize}
-   
 \end{frame}
+
+\section[SonarCloud in Action]{SonarCloud in Action}
 
 \begin{frame}{Live Demo}
  
