--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -280,10 +280,10 @@
   \end{itemize}
 \end{frame}
 
-\section[SonarCloud in Action]{SonarCloud in Action}
+% \section[SonarCloud in Action]{SonarCloud in Action}
 
-\begin{frame}{Live Demo}
+% \begin{frame}{Live Demo}
  
-\end{frame}
+% \end{frame}
 
 \end{document}
