--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -102,6 +102,29 @@
   \href{https://youtu.be/xeTwG9XFFTE}{\includegraphics[scale=0.45]{fig/what_is_sonar_video.png}}
 \end{frame}
 
+\begin{frame}{Pricing}
+    \textbf{Community (Free)}: 
+    \begin{itemize}
+        \item Open Source Projects.
+        \item Supports 29 languages.
+        \item Only main branch \& pull requests.
+    \end{itemize}
+
+    \textbf{Team Plan (Starting from \$32/month)}: 
+    \begin{itemize}
+        \item All Community features + AI Code Assurance and AI Assurance.
+        \item Private projects.
+    \end{itemize}
+
+    \textbf{Enterprise (Custom pricing)}: 
+    \begin{itemize}
+        \item All Team features + Single sign-on (SSO).
+        \item Additional 6 enterprise languages.
+        \item Manage multiple organizations within an Enterprise Hierarchy.
+        \item Commercial support included.
+    \end{itemize}
+\end{frame}
+
 
 \section[Why Use SonarCloud?]{Why Use SonarCloud?}
 
