--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -112,13 +112,13 @@
 
     \textbf{Team Plan (Starting from \$32/month)}: 
     \begin{itemize}
-        \item All Community features + AI Code Assurance and AI Assurance.
+        \item AI Code Assurance and AI Assurance.
         \item Private projects.
     \end{itemize}
 
     \textbf{Enterprise (Custom pricing)}: 
     \begin{itemize}
-        \item All Team features + Single sign-on (SSO).
+        \item Single sign-on (SSO).
         \item Additional 6 enterprise languages.
         \item Manage multiple organizations within an Enterprise Hierarchy.
         \item Commercial support included.
