--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -112,8 +112,8 @@
 
     \textbf{Team Plan (Starting from \$32/month)}: 
     \begin{itemize}
+        \item Private Projects.
         \item AI Code Assurance and AI Assurance.
-        \item Private projects.
     \end{itemize}
 
     \textbf{Enterprise (Custom pricing)}: 
