--- a/beamer/sonar.tex
+++ b/beamer/sonar.tex
@@ -103,26 +103,26 @@
 \end{frame}
 
 \begin{frame}{Pricing}
-    \textbf{Community (Free)}: 
-    \begin{itemize}
-        \item Open Source Projects.
-        \item Supports 29 languages.
-        \item Only main branch \& pull requests.
-    \end{itemize}
-
-    \textbf{Team Plan (Starting from \$32/month)}: 
-    \begin{itemize}
-        \item Private Projects.
-        \item AI Code Assurance and AI Assurance.
-    \end{itemize}
-
-    \textbf{Enterprise (Custom pricing)}: 
-    \begin{itemize}
-        \item Single sign-on (SSO).
-        \item Additional 6 enterprise languages.
-        \item Manage multiple organizations within an Enterprise Hierarchy.
-        \item Commercial support included.
-    \end{itemize}
+  \textbf{Community (Free)}:
+  \begin{itemize}
+      \item Open Source Projects.
+      \item Supports 29 languages.
+      \item Only main branch \& pull requests.
+  \end{itemize}
+ 
+  \textbf{Team Plan (Starting from \char36 32/month)}:
+  \begin{itemize}
+      \item Private Projects.
+      \item AI Code Assurance and AI Assurance.
+  \end{itemize}
+ 
+  \textbf{Enterprise (Custom pricing)}:
+  \begin{itemize}
+      \item Single sign-on SSO.
+      \item Additional 6 enterprise languages.
+      \item Manage multiple organizations within an Enterprise Hierarchy.
+      \item Commercial support included.
+  \end{itemize}
 \end{frame}
 
 
